Ajout de l'update sur Commande et ajout de la créaction de Paiement.